--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" oncontextmenu="customContextMenu(event)">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 <body>
     <header class="encabezado_header">
         <nav class="nav_content_203">
-            <div class="img" oncontextmenu="customContextMenu(event)">
+            <div class="img">
                 <img class="logo" id="logo" src="favicon.png" alt="favicon" srcset="favicon.png">
             </div>
         <label for="title">Busque el codigo Aduanal</label>
